appId: org.reactjs.native.example.CioRnSceneHost
name: React Native UIScene cold push routing, open
---
- pressKey: Home
- extendedWaitUntil:
    visible:
      id: "NotificationShortLookView"
    timeout: 60000
- tapOn:
    id: "NotificationShortLookView"
    retryTapIfNoChange: false
- extendedWaitUntil:
    visible: "Received: https://customer.io/react-native-scene-e2e/cold"
    timeout: 15000
